# dados_deputados

./: pyproject.toml
.astro/: config.yaml
dags/: dag_deputados.py
include/: extract.py
