[tool.poetry]
name = "dados_deputados"
version = "0.1.0"
description = ""
authors = ["luhborba <luhborbafilho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.3.0"
isort = "^5.13.2"
pip-audit = "^2.7.2"
taskipy = "^1.12.2"
pre-commit = "^3.7.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
